--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=camera-servico
-
 server.port=8200
 
-spring.config.import=optional:configserver:http://localhost:8888/
-spring.cloud.config.uri=http://localhost:8888
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbcamera
+spring.datasource.username=root
+spring.datasource.password=2yk7
 
-spring.profiles.active=dev
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+eureka.client.service-url.defaultZone=http://localhost:8750/eureka/
+eureka.instance.prefer-ip-address=true
